solved issue with navbar usage in mobile viewport when scrolling back up
- added function for temporary pausing the scroll logic when using the hamburger navigation;
- modified shrink logic to avoid glitching when scrolling;
- moved the moulding in 700-france down so that it doesn't cover the hambuger nav in mobile viewport

--- a/css/themes/700-france.css
+++ b/css/themes/700-france.css
@@ -129,6 +129,11 @@ header::after,
     linear-gradient(to bottom, #d1b350 0%, #b89635 20%, #8c6e22 50%, #c3a041 75%, #4a3a12 100%);
   box-shadow: inset 0 2px 2px rgba(255,255,255,0.3), inset 0 -2px 4px rgba(0,0,0,0.4), 0 2px 6px rgba(0,0,0,0.3);
 }
+
+header::after {
+  bottom: -14px;
+}
+
 /* Map section z-index override */
 #map-section::after { z-index: 2; }
 
